add request  module

--- a/src/app/components/driver/driver.component.html
+++ b/src/app/components/driver/driver.component.html
@@ -13,7 +13,7 @@
                   <th>Mobile No</th>
                   <th>Licence No</th>
                   <th>Email Address</th>
-                  <th>Truck Number</th>
+                  <th>Id Number</th>
                   <th>Action</th>
               </tr>
             </thead>
@@ -22,9 +22,9 @@
                 <td>{{driver.firstname}}</td>
                 <td>{{ driver.surname}}</td>
                 <td>{{driver.mobileNo}}</td>
-                <td>07211564</td>
-                <td>mulwatech@gmail.com</td>
-                <td>KBS-552J</td>
+                <td>{{driver.licenceNo}}</td>
+                <td>{{driver.email}}</td>
+                <td>{{driver.idNo}}</td>
                 <td><button class="btn btn-primary"> <i class="fa fa-info" aria-hidden="true"></i>
                   Details</button></td>
               </tr>
