--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -10,7 +10,7 @@
           <a routerLink="/about">About</a>
       </li>
       <li>
-          <a routerLink="/services">Services</a>
+          <a routerLink="/services">Requests</a>
       </li>      
       <li>
           <a routerLink="/truckDashboard">Trucks</a>
