--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,6 +1,7 @@
 <div class="container">     
     <div class="row">
-        <div class="col-md-12">
+            <app-loading *ngIf="showLoading"></app-loading>
+        <div class="col-md-12" *ngIf="!showLoading">
             <h4> Transport Requests</h4>
             <table class="table table-bordered table-striped" width="100%">
                 <thead class="thead-inverse">
